Ajustar URL base

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.luciete.com.br"
+baseURL = "https://casamento-luciana.verce.app"
 theme = "nostyle"
 relativeURLs = true
 title = "Casamento Luciana e Kaio"
